--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@cloudscape-design/collection-hooks": "^1.0.21",
+    "@cloudscape-design/components": "^3.0.310",
+    "@cloudscape-design/global-styles": "^1.0.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
