--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -12,12 +12,13 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts --openssl-legacy-provider start",
+    "start": "set HTTPS=false&&react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
