--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.3.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -37,6 +41,8 @@
     ]
   },
   "devDependencies": {
-    "jest-editor-support": "^31.0.1"
+    "awesome-typescript-loader": "^5.2.1",
+    "jest-editor-support": "^31.0.1",
+    "typescript": "^5.1.3"
   }
 }
