--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
+    "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,8 +42,7 @@
     ]
   },
   "devDependencies": {
-    "awesome-typescript-loader": "^5.2.1",
-    "jest-editor-support": "^31.0.1",
-    "typescript": "^5.1.3"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "jest-editor-support": "^31.0.1"
   }
 }
