--- a/reactapp/package.json
+++ b/reactapp/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/msal-browser": "^3.0.2",
+    "@azure/msal-common": "^14.0.2",
+    "@azure/msal-node": "^2.0.2",
+    "@azure/msal-react": "^2.0.2",
     "@cloudscape-design/collection-hooks": "^1.0.21",
     "@cloudscape-design/components": "^3.0.310",
     "@cloudscape-design/global-styles": "^1.0.9",
@@ -14,7 +18,9 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "http-proxy-middleware": "^2.0.6",
+    "msal": "^1.4.18",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.13.0",
     "react-router-dom": "^6.13.0",
