--- a/webapi/Properties/launchSettings.json
+++ b/webapi/Properties/launchSettings.json
@@ -14,7 +14,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5179",
+      "applicationUrl": "http://localhost:3000",
+      /*
+      "applicationUrl": "http://intranet-new.wisdells.com:8080",
+*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -24,7 +27,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7182;http://localhost:5179",
+      "applicationUrl": "https://localhost:3000",
+/*
+      "applicationUrl": "https://intranet-new.wisdells.com:8080",
+*/
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
